a few tweaks to the proxy setup per the jenknins wiki for newer versions of jenkins (and apache?) the nocanon, the NoDecode and X-*-headrees didn't use to be necessary

--- a/base-jenkins/site-cookbooks/apache-configuration/templates/default/_apache_common.erb
+++ b/base-jenkins/site-cookbooks/apache-configuration/templates/default/_apache_common.erb
@@ -1,4 +1,3 @@
-  ServerName        jenkins
   ProxyRequests     Off
 <% node['jenkins']['http_proxy']['host_aliases'].each do |a| -%>
   ServerAlias       <%= a %>
@@ -13,10 +12,11 @@
     Allow from all
   </Proxy>
 
-  ProxyPreserveHost on
-  ProxyPass         /  http://localhost:<%= node['jenkins']['master']['port'] %>/
+  ProxyPreserveHost On
+  ProxyPass         /  http://localhost:<%= node['jenkins']['master']['port'] %>/ nocanon
   ProxyPassReverse  /  http://localhost:<%= node['jenkins']['master']['port'] %>/
-  ProxyPassReverse  /  http://localhost:<%= node['jenkins']['master']['port'] %>/
+  AllowEncodedSlashes NoDecode
+
 <% node['jenkins']['http_proxy']['host_aliases'].each do |a| -%>
   ProxyPassReverse  /  http://<%= a%>
 <% end -%>
